--- a/requirements.txt
+++ b/requirements.txt
@@ -1,104 +1,16 @@
-alembic==1.13.1
-altgraph==0.17.4
-asgiref==3.8.1
-attrs==23.2.0
-autobahn==23.6.2
-Automat==22.10.0
-bidict==0.22.1
-blinker==1.8.2
-cachetools==5.5.2
-certifi==2024.6.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-cmdstanpy==1.2.3
-constantly==23.10.4
-contourpy==1.2.1
-cryptography==42.0.5
+contourpy==1.3.0
+customtkinter==5.2.2
 cycler==0.12.1
-daphne==4.1.2
-distlib==0.3.8
-Django==5.0.4
-dnspython==2.4.2
-env==0.1.0
-eventlet==0.33.3
-filelock==3.13.1
-Flask==3.0.3
-Flask-Migrate==4.0.7
-Flask-SQLAlchemy==3.1.1
-fonttools==4.53.0
-google-api-core==2.24.2
-google-api-python-client==2.164.0
-google-auth==2.38.0
-google-auth-httplib2==0.2.0
-googleapis-common-protos==1.69.2
-greenlet==3.0.3
-h11==0.14.0
-holidays==0.50
-httplib2==0.22.0
-hyperlink==21.0.0
-idna==3.7
-importlib_resources==6.4.0
-incremental==22.10.0
-iniconfig==2.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.3
-kiwisolver==1.4.5
-logger==1.4
-macholib==1.16.3
-Mako==1.3.5
-MarkupSafe==2.1.5
-matplotlib==3.9.0
-numpy==1.26.4
-packaging==23.2
-pandas==2.2.2
-pillow==10.3.0
-platformdirs==4.1.0
-pluggy==1.5.0
-prophet==1.1.5
-proto-plus==1.26.1
-protobuf==6.30.1
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycparser==2.22
-pyinstaller==6.2.0
-pyinstaller-hooks-contrib==2023.10
-PyMySQL==1.1.0
-pyOpenSSL==24.1.0
-pyparsing==3.1.2
-PyQt5==5.15.10
-PyQt5-Qt5==5.15.11
-PyQt5-sip==12.13.0
-PyQtWebEngine==5.15.6
-PyQtWebEngine-Qt5==5.15.2
-pytest==8.1.1
+darkdetect==0.8.0
+fonttools==4.54.1
+importlib_resources==6.4.5
+kiwisolver==1.4.7
+matplotlib==3.9.2
+numpy==2.0.2
+packaging==24.2
+pillow==11.0.0
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
-python-engineio==4.8.0
-python-socketio==5.10.0
-pytube==15.0.0
-pytz==2024.1
-redis==5.2.1
-requests==2.32.3
-rsa==4.9
-service-identity==24.1.0
-setuptools==69.0.2
-simple-websocket==1.0.0
 six==1.16.0
-spotipy==2.25.0
-SQLAlchemy==2.0.29
-sqlparse==0.5.0
-stanio==0.5.0
-timeflake==0.4.3
-tqdm==4.66.4
-Twisted==24.3.0
-txaio==23.1.1
-typing_extensions==4.11.0
-tzdata==2024.1
-uritemplate==4.1.1
-urllib3==2.2.1
-virtualenv==20.25.0
-Werkzeug==3.0.2
-wheel==0.43.0
-wsproto==1.2.0
-yt-dlp==2025.2.19
-zope.interface==6.3
+speedtest-cli==2.1.3
+zipp==3.21.0
